--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="description"
+        content="Ett enkelt och klassiskt recept på tunna pannkakor – perfekt till frukost, lunch eller dessert. Med få ingredienser och snabb tillagning." />
     <link href="styles/style.css" rel="stylesheet" />
     <title>Pannkakor</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,38 +15,51 @@
 </head>
 
 <body>
-    <img id="banner" src="images/pannkakor1.jpg" alt="En bild på pannkakor med grädde och hallon." />
-    <div id="content">
-        <h1>Enkelt recept på pannkakor</h1>
-        <p id="infotext">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
+    <header>
+        <img id="banner" src="images/pannkakor1.jpg" alt="En bild på pannkakor med grädde och hallon." />
+    </header>
 
-        <h2 class="ingr-head">Ingredienser</h2>
-        <p class="ingr-head">(4 port)</p>
-        <ul>
-            <li>2 1/2 dl vetemjöl</li>
-            <li>1/2 tsk salt</li>
-            <li>6 dl mjölk</li>
-            <li>3 ägg </li>
-            <li>smör (till stekning)</li>
-            <li>sylt, bär eller frukt till servering</li>
-        </ul>
+    <main>
+        <article>
+            <header>
+                <h1>Enkelt recept på pannkakor</h1>
+                <p id="infotext">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
+            </header>
 
-        <h2>Så här gör du</h2>
-        <ol>
-            <li>Blanda mjöl och salt i en bunke.</li>
-            <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
-            <li>Vispa i resten av mjölken och äggen.</li>
-            <li>Låt smeten vila ca 10 minuter.</li>
-            <li>Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek- eller pannkakspanna.</li>
-            <li>Servera med sylt, bär eller frukt.</li>
-        </ol>
+            <section>
+                <h2 class="ingr-head">Ingredienser</h2>
+                <p class="ingr-head">(4 port)</p>
+                <ul>
+                    <li>2 1/2 dl vetemjöl</li>
+                    <li>1/2 tsk salt</li>
+                    <li>6 dl mjölk</li>
+                    <li>3 ägg </li>
+                    <li>smör (till stekning)</li>
+                    <li>sylt, bär eller frukt till servering</li>
+                </ul>
+            </section>
 
-        <h2>Serveringsförslag</h2>
-        <div id="bottomimg">
-            <img src="images/pannkakor2.jpg" alt="En bild på pannkakor och en gaffel." />
-            <img src="images/pannkakor3.jpg" alt="En bild på pannkakor med apelsin." />
-        </div>
-    </div>
+            <section>
+                <h2>Så här gör du</h2>
+                <ol>
+                    <li>Blanda mjöl och salt i en bunke.</li>
+                    <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
+                    <li>Vispa i resten av mjölken och äggen.</li>
+                    <li>Låt smeten vila ca 10 minuter.</li>
+                    <li>Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek- eller pannkakspanna.</li>
+                    <li>Servera med sylt, bär eller frukt.</li>
+                </ol>
+            </section>
+
+            <section>
+                <h2>Serveringsförslag</h2>
+                <div id="bottomimg">
+                    <img src="images/pannkakor2.jpg" alt="En bild på pannkakor och en gaffel." />
+                    <img src="images/pannkakor3.jpg" alt="En bild på pannkakor med apelsin." />
+                </div>
+            </section>
+        </article>
+    </main>
 </body>
 
 </html>
