--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img id="banner" src="images/pannkakor1.jpg" alt="En bild på pannkakor med grädde och hallon." />
+        <img id="banner" src="images/pannkakor1.jpg" alt="Pannkakor med grädde och hallon." />
     </header>
 
     <main>
@@ -27,8 +27,7 @@
             </header>
 
             <section>
-                <h2 class="ingr-head">Ingredienser</h2>
-                <p class="ingr-head">(4 port)</p>
+                <h2>Ingredienser <span class="normal-font-weight">(4 port)</span></h2>
                 <ul>
                     <li>2 1/2 dl vetemjöl</li>
                     <li>1/2 tsk salt</li>
@@ -53,9 +52,15 @@
 
             <section>
                 <h2>Serveringsförslag</h2>
-                <div id="bottomimg">
-                    <img src="images/pannkakor2.jpg" alt="En bild på pannkakor och en gaffel." />
-                    <img src="images/pannkakor3.jpg" alt="En bild på pannkakor med apelsin." />
+                <div id="img-container">
+                    <figure>
+                        <img src="images/pannkakor2.jpg" alt="Pannkakor med grädde, bär och en citron vid sidan om."
+                            width="400px" height="330px" />
+                    </figure>
+                    <figure>
+                        <img src="images/pannkakor3.jpg" alt="Pannkakor med apelsin, grädde och honung." width="400px"
+                            height="330px" />
+                    </figure>
                 </div>
             </section>
         </article>
