--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 <body>
     <header>
-        <img id="banner" src="images/pannkakor1.jpg" alt="Pannkakor med grädde och hallon." />
+        <img id="banner" src="images/pannkakor1.jpg"
+            alt="Hemsidans banner: pannkakor med grädde och hallon och ett glas mjölk till, redo att serveras."
+            width="898px" height="400px" />
     </header>
 
     <main>
@@ -27,7 +29,7 @@
             </header>
 
             <section>
-                <h2>Ingredienser <span class="normal-font-weight">(4 port)</span></h2>
+                <h2>Ingredienser <span style="font-weight: normal;">(4 port)</span></h2>
                 <ul>
                     <li>2 1/2 dl vetemjöl</li>
                     <li>1/2 tsk salt</li>
@@ -58,8 +60,8 @@
                             width="400px" height="330px" />
                     </figure>
                     <figure>
-                        <img src="images/pannkakor3.jpg" alt="Pannkakor med apelsin, grädde och honung." width="400px"
-                            height="330px" />
+                        <img src="images/pannkakor3.jpg" alt="Pannkakor med apelsin, nötter, grädde och honung."
+                            width="400px" height="330px" />
                     </figure>
                 </div>
             </section>
