--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <img id="banner" src="images/pannkakor1.jpg"
             alt="Hemsidans banner: pannkakor med grädde och hallon och ett glas mjölk till, redo att serveras."
-            width="898px" height="400px" />
+            width="898" height="400" />
     </header>
 
     <main>
@@ -57,11 +57,11 @@
                 <div id="img-container">
                     <figure>
                         <img src="images/pannkakor2.jpg" alt="Pannkakor med grädde, bär och en citron vid sidan om."
-                            width="400px" height="330px" />
+                            width="400" height="330" />
                     </figure>
                     <figure>
-                        <img src="images/pannkakor3.jpg" alt="Pannkakor med apelsin, nötter, grädde och honung."
-                            width="400px" height="330px" />
+                        <img src="images/pannkakor3.jpg" alt="Pannkakor med apelsin, apelsinskal, grädde och honung."
+                            width="400" height="330" />
                     </figure>
                 </div>
             </section>
